--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,23 @@
-<header class="row site-header">
-  <div class="small-10 columns">
-    <img src="images/avatar.png" class="avatar"></img>
+<div class="row">
+  <div class="small-10 medium-9 columns">
+    <img src="/images/avatar.png" class="avatar"></img>
     <div class="header-block">
       <div class="titles-block">
         <div class="site-title">Brian Lundin</div>
-        <div class="site-subtitle">
+        <div class="site-subtitle show-for-small-only">
           <a href="http://twitter.com/blundin">@blundin</a>
         </div>
+        <div class="site-subtitle show-for-medium-up">code, design and creativity</div>
       </div>
     </div>
-  </div>
-  <div class="small-6 columns">
+    </div>
+    <div class="small-6 medium-7 columns no-left-padding">
     <div class="header-block">
       <div class="links-block">
-        <a href="#" class="header-link">Posts</a><a href="#" class="header-link">About</a>
+        <a href="/index.html" class="header-link">Posts</a>&nbsp;
+        <a href="/about/" class="header-link">About</a>&nbsp;
+        <a href="http://twitter.com/blundin" class="header-link show-for-medium-up">@blundin</a>
       </div>
     </div>
   </div>
-</header>
+</div>
