--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-    <body>
-    {% include header.html %}
+  <body>
+    <header class="row site-header">
+      <div class="small-16 medium-12 medium-centered large-9 large-centered columns">
+        {% include header.html %}
+      </div>
+    </header>
     <div class="row content">
-      <div class="small-16 columns">
+      <div class="small-16 medium-12 medium-centered large-9 large-centered columns">
       {{ content }}
       </div>
     </div>
-    {% include footer.html %}
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-    </body>
+    <footer class="row">
+      <div class="small-16 medium-12 medium-centered large-9 large-centered columns">
+        {% include footer.html %}
+      </div>
+    </footer>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/foundation/js/foundation.min.js"></script>
+    <script src="/js/app.js"></script>
+  </body>
 </html>
