--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
-<footer class="row">
-  <div class="small-12 columns"></div>
-</footer>
+<ul class="footer-nav">
+  <li class="footer-nav-item"><a href="/">Posts</a></li>
+  <li class="footer-nav-item not-first"><a href="/about">About</a></li>
+  <li class="footer-nav-item not-first"><a href="/feed.xml">RSS</a></li>
+  <li class="footer-nav-item not-first"><a href="http://twitter.com/blundin">@blundin</a></li>
+</ul>
