--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -40,9 +40,9 @@ $total-columns: 16;
 
 // We use these to control various global styles
 // $body-bg: #fff;
-$body-font-color: #252525;
+$body-font-color: $gray-dark;
 $body-font-family: $serif-font;
-// $body-font-weight: normal;
+$body-font-weight: 300;
 // $body-font-style: normal;
 
 // We use this to control font-smoothing
@@ -121,14 +121,14 @@ $body-font-family: $serif-font;
 $header-font-family: $sans-serif-font;
 // $header-font-weight: normal;
 // $header-font-style: normal;
-// $header-font-color: #222;
+$header-font-color: $gray-dark;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
+$h1-font-size: rem-calc(40);
 // $h2-font-size: rem-calc(37);
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
