--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="small-10 medium-9 columns">
-    <img src="/images/avatar.png" class="avatar"></img>
+    <!--<img src="/images/avatar.png" class="avatar"></img>-->
+    <div class="avatar"></div>
     <div class="header-block">
       <div class="titles-block">
         <div class="site-title">Brian Lundin</div>
@@ -10,8 +11,8 @@
         <div class="site-subtitle show-for-medium-up">code, design and creativity</div>
       </div>
     </div>
-    </div>
-    <div class="small-6 medium-7 columns no-left-padding">
+  </div>
+  <div class="small-6 medium-7 columns no-left-padding">
     <div class="header-block">
       <div class="links-block">
         <a href="/index.html" class="header-link">Posts</a>&nbsp;
