--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,13 @@
       {{ content }}
       </div>
     </div>
-    <footer class="row">
-      <div class="small-16 medium-12 medium-centered large-9 large-centered columns">
-        {% include footer.html %}
-      </div>
-    </footer>
+    <div id="footer">
+      <footer class="row">
+        <div class="small-16 medium-12 medium-centered large-9 large-centered columns">
+          {% include footer.html %}
+        </div>
+      </footer>
+    </div>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/foundation/js/foundation.min.js"></script>
     <script src="/js/app.js"></script>
