--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,15 @@ layout: default
     <h1>{{ page.title }}</h1>
   </header>
   <article class="post-content">
-  {{ content }}
+    {{ content }}
+    <hr>
+    <div class="row">
+    <div class="small-8 columns">
+
+    </div>
+    <div class="small-8 columns right-aligned">
+      {{ page.date | date: "%b %-d, %Y" }}
+    </div>
+  </div>
   </article>
-  <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
 </div>
