--- a/scss/master.scss
+++ b/scss/master.scss
@@ -16,11 +16,13 @@ $med-header-link-font-size: 11pt;
 
 /* Colors */
 $gray-light: #818181;
+$gray-lighter: lighten($gray-light, 30%);
 $gray-dark: #3e3e3e;
 
 
 @import "settings";
 @import "../bower_components/foundation/scss/foundation";
+@import "mixins";
 
 // Or selectively include components
 // @import
