--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -3,10 +3,18 @@
     <a href="https://twitter.com/share?url={{ site.url | append: page.url | url_encode | downcase }}&via=blundin" target="_blank">
       <div class="social-icon twitter-icon"></div>
     </a>
-    <div class="social-icon appdotnet-icon"></div>
-    <div class="social-icon facebook-icon"></div>
+    <a href="https://alpha.app.net/intent/post?text={{ site.url | append: page.url | url_encode | downcase }}" target="_blank">
+      <div class="social-icon appdotnet-icon"></div>
+    </a>
+    <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url | append: page.url | url_encode | downcase }}" target="_blank">
+      <div class="social-icon facebook-icon"></div>
+    </a>
   </div>
-  <div class="small-8 columns right-aligned">
-    {{ page.date | date: "%b %-d, %Y" }}
+  <div class="small-8 columns right-aligned sans-serif">
+    {% if page.date %}
+      {{ page.date | date: "%b %-d, %Y" }}
+    {% else %}
+      {{ post.date | date: "%b %-d, %Y" }}
+    {% endif %}
   </div>
 </div>
