--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,5 +22,6 @@
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/foundation/js/foundation.min.js"></script>
     <script src="/js/app.js"></script>
+    <script src='https://d2zh9g63fcvyrq.cloudfront.net/adn.js'></script>
   </body>
 </html>
