--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,6 @@
   <li class="footer-nav-item not-last"><a href="/">Posts</a></li>
   <li class="footer-nav-item not-last"><a href="/about">About</a></li>
   <li class="footer-nav-item not-last"><a href="/feed.xml">RSS</a></li>
-  <li class="footer-nav-item"><a href="http://twitter.com/blundin">@blundin</a></li>
+  <li class="footer-nav-item not-last"><a href="http://twitter.com/blundin">@blundin</a></li>
+<li class="footer-nav-item"><a href="https://plus.google.com/+BrianLundin?rel=author">Google+</a></li>
 </ul>
