--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,19 @@
 ---
 layout: default
 ---
-<div class="post">
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-  </header>
-  <article class="post-content">
-    {{ content }}
-    <hr>
-    {% include post_footer.html %}
-  </article>
-</div>
+<article class="post">
+  <meta itemprop="articleBody" content="{{ content | strip_newlines | strip_html }}" />
+  <span itemscope itemtype="http://schema.org/Article">
+    <header class="post-header">
+      <h1>
+        <span itemprop="name">{{ page.title }}</span>
+      </h1>
+    </header>
+    <div class="post-content">
+      <meta itemprop="articleBody" content=""/>
+      {{ content }}
+      <hr>
+      {% include post_footer.html %}
+    </div>
+  </span>
+</article>
