--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,12 @@
   <meta charset="utf-8">
   <script type="text/javascript" src="//use.typekit.net/lul4xyc.js"></script>
   <script async type="text/javascript">try{Typekit.load();}catch(e){}</script>
-  <script async src="/bower_components/modernizr/modernizr.min.js"></script>
-  <script async type="text/javascript" src="/js/analytics.min.js"></script>
+  <script async src="{{ '/bower_components/modernizr/modernizr.min.js' | cdn }}"></script>
+  <script async type="text/javascript" src="{{ '/js/analytics.min.js' | cdn }}"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="{{ site.description }}">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
-  <link rel="stylesheet" href="/css/master.min.css">
+  <link rel="stylesheet" href="{{ '/css/master.min.css' | cdn }}">
 </head>
