--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/foundation/js/foundation.min.js"></script>
-<script src="/js/app.min.js"></script>
+<script src="{{ '/bower_components/jquery/dist/jquery.min.js' | cdn }}"></script>
+<script src="{{ '/bower_components/foundation/js/foundation.min.js' | cdn }}"></script>
+<script src="{{ '/js/app.min.js' | cdn }}"></script>
 <script src='https://d2zh9g63fcvyrq.cloudfront.net/adn.js'></script>
