--- a/css/master.scss
+++ b/css/master.scss
@@ -21,45 +21,47 @@ $gray-dark: #3e3e3e;
 
 
 @import "settings";
-@import "../bower_components/foundation/scss/foundation";
+//@import "../bower_components/foundation/scss/foundation";
 @import "mixins";
 
 // Or selectively include components
-// @import
+@import
+    "../bower_components/foundation/scss/foundation/components/block-grid",
+    "../bower_components/foundation/scss/foundation/components/grid",
+    "../bower_components/foundation/scss/foundation/components/inline-lists",
+    "../bower_components/foundation/scss/foundation/components/flex-video",
+    "../bower_components/foundation/scss/foundation/components/pagination",
+    "../bower_components/foundation/scss/foundation/components/type",
+    "../bower_components/foundation/scss/foundation/components/visibility",
+    "../bower_components/foundation/scss/foundation/components/sub-nav",
+    "../bower_components/foundation/scss/foundation/components/button-groups",
+    "../bower_components/foundation/scss/foundation/components/buttons",
+    "../bower_components/foundation/scss/foundation/components/clearing",
+    "../bower_components/foundation/scss/foundation/components/labels",
+    "../bower_components/foundation/scss/foundation/components/keystrokes",
+    "../bower_components/foundation/scss/foundation/components/forms",
+    "../bower_components/foundation/scss/foundation/components/side-nav",
+    "../bower_components/foundation/scss/foundation/components/thumbs",
+    "../bower_components/foundation/scss/foundation/components/tables",
+    "../bower_components/foundation/scss/foundation/components/tabs";
+
 //   "foundation/components/accordion",
 //   "foundation/components/alert-boxes",
-//   "foundation/components/block-grid",
 //   "foundation/components/breadcrumbs",
-//   "foundation/components/button-groups",
-//   "foundation/components/buttons",
-//   "foundation/components/clearing",
 //   "foundation/components/dropdown",
 //   "foundation/components/dropdown-buttons",
-//   "foundation/components/flex-video",
-//   "foundation/components/forms",
-//   "foundation/components/grid",
-//   "foundation/components/inline-lists",
 //   "foundation/components/joyride",
-//   "foundation/components/keystrokes",
-//   "foundation/components/labels",
 //   "foundation/components/magellan",
 //   "foundation/components/orbit",
-//   "foundation/components/pagination",
 //   "foundation/components/panels",
 //   "foundation/components/pricing-tables",
 //   "foundation/components/progress-bars",
 //   "foundation/components/reveal",
-//   "foundation/components/side-nav",
 //   "foundation/components/split-buttons",
-//   "foundation/components/sub-nav",
 //   "foundation/components/switch",
-//   "foundation/components/tables",
-//   "foundation/components/tabs",
-//   "foundation/components/thumbs",
 //   "foundation/components/tooltips",
 //   "foundation/components/top-bar",
-//   "foundation/components/type",
 //   "foundation/components/offcanvas",
-//   "foundation/components/visibility";
+//   ;
 
 @import "custom";
