--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
   <link rel="stylesheet" href="{{ '/css/master.min.css' | cdn }}">
+  {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 </head>
