--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,17 @@
 ---
 layout: default
 ---
-<article class="post">
-  <meta itemprop="articleBody" content="{{ content | strip_newlines | strip_html }}" />
-  <span itemscope itemtype="http://schema.org/Article">
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  <span >
     <header class="post-header">
       <h1>
         <span itemprop="name">{{ page.title }}</span>
       </h1>
     </header>
     <div class="post-content">
-      <meta itemprop="articleBody" content=""/>
-      {{ content }}
+      <span itemprop="articleBody">
+        {{ content }}
+      </span>
       <hr>
       {% include post_footer.html %}
     </div>
