changed About URL

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
     <div class="header-block">
       <div class="links-block">
         <a href="/index.html" class="header-link">Posts</a>&nbsp;
-        <a href="/about/" class="header-link">About</a>&nbsp;
+        <a href="/about.html" class="header-link">About</a>&nbsp;
         <a href="http://twitter.com/blundin" class="header-link show-for-medium-up">@blundin</a>
       </div>
     </div>
