--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -90,6 +90,18 @@
   margin-top: 20px;
 }
 
+/* Paginator */
+.pagination-row {
+  text-align: center;
+}
+
+.page-link {
+  margin-top: 0px;
+  margin-bottom: 15px;
+  width: 100px;
+}
+
+
 /* Post */
 .post-content {
   p {
