--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,6 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
   <link rel="stylesheet" href="{{ '/css/master.min.css' | cdn }}">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 </head>
