--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,11 @@ layout: default
   <span >
     <header class="post-header">
       <h1>
-        <span itemprop="name">{{ page.title }}</span>
+        {% if page.link %}
+          <a href="{{ page.link }}">&#65515;&nbsp;<span itemprop="name">{{ page.title }}</span></a>
+        {% else %}
+          <a href="{{ page.url }}"><span itemprop="name">{{ page.title }}</span></a>
+        {% endif %}
       </h1>
     </header>
     <div class="post-content">
