--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
     <header class="post-header">
       <h1>
         {% if page.link %}
-          <a href="{{ page.link }}">&#65515;&nbsp;<span itemprop="name">{{ page.title }}</span></a>
+          <a href="{{ page.link }}">&rarr;&nbsp;<span itemprop="name">{{ page.title }}</span></a>
         {% else %}
           <a href="{{ page.url }}"><span itemprop="name">{{ page.title }}</span></a>
         {% endif %}
