--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,8 @@
 <head>
   <meta charset="utf-8">
+  <!--[if lt IE 9]>
+  <script src="/bower_components/html5shiv/dist/html5shiv.min.js"></script>
+  <![endif]-->
   <script type="text/javascript" src="//use.typekit.net/lul4xyc.js"></script>
   <script async type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <script async src="{{ '/bower_components/modernizr/modernizr.min.js' | cdn }}"></script>
