--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,6 +2,7 @@
 <script src="{{ '/bower_components/foundation/js/foundation.min.js' | cdn }}"></script>
 <script src="{{ '/js/app.min.js' | cdn }}"></script>
 <script src='https://d2zh9g63fcvyrq.cloudfront.net/adn.js'></script>
+<script type="text/javascript" src="http://104.131.107.76/tracking/javascripts/tracking.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
