finished initial quick grades additions

--- a/_layouts/quickgrades.html
+++ b/_layouts/quickgrades.html
@@ -3,6 +3,7 @@
   {% include qg_head.html %}
   <body>
     {{ content }}
+    {% include qg_footer.html %}
     {% include scripts.html %}
   </body>
 </html>
