updating retina images for Quick Grades

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -7,5 +7,6 @@
     /* on retina, use image that's scaled by 2 */
     background-image: url($image);
     background-size: $width $height;
+    background-position: center;
   }
 }
