--- a/_includes/qg_head.html
+++ b/_includes/qg_head.html
@@ -6,6 +6,7 @@
   <script src="//use.typekit.net/ozi0kon.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
   <script async src="/bower_components/modernizr/modernizr.min.js"></script>
+  <script src="/js/picturefill.min.js" async></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
