switched typekit accounts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
   <!--[if lt IE 9]>
   <script src="/bower_components/html5shiv/dist/html5shiv.min.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="//use.typekit.net/lul4xyc.js"></script>
-  <script async type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <script src="//use.typekit.net/wem6qvx.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
   <script async src="{{ '/bower_components/modernizr/modernizr.min.js' | cdn }}"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
